[tool.poetry]
name = "HerdPanic"
version = "1.1.4"
description = "Hitting animals also panics their herd"
authors = ["Oran9eUtan"]

[tool.poetry.dependencies]
beet = "^0"
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95

[tool.isort]
profile = "black"
line_length = 95
