[tool.poetry]
name = "HerdPanic"
version = "1.2.0"
description = "Hitting animals also panics their herd"
authors = ["Oran9eUtan"]

[tool.poetry.dependencies]
beet = "^0"
python = "^3.9"
pre-commit = "^2.10"
black = "^20.8b1"
isort = "^5.7"
invoke = "^1.5"
python-semantic-release = "^7.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95

[tool.isort]
profile = "black"
line_length = 95

[tool.semantic_release]
branch="release"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "beet-release.json:(\\d+\\.\\d+\\.\\d+)"
major_on_zero = false
build_command = "beet -c beet-release.json build"
dist_path = "dist"
upload_to_pypi = false
upload_to_release = true
